# vatsinator-legacy

./: .astylerc  .gitignore  .travis.yml  CMakeLists.txt  Changelog  Doxyfile.in  Manifest  README  README.md  TODO  VERSION  appveyor.yml  cmake_uninstall.cmake.in  main.cpp
plugins/ultimate-weather-forecasts/: .kdev_include_paths  CMakeLists.txt  ultimateweatherforecasts.cpp  ultimateweatherforecasts.h  ultimateweatherforecasts.json
resources/: ATCDetailsWindow.ui  AirportDetailsWindow.ui  CMakeLists.txt  FlightDetailsWindow.ui  MetarsWindow.ui  SettingsWindow.ui  UserInterface.ui  WorldAirports.db  WorldFirs.db  WorldMap.db  imgs.qrc  vatsinator-desktop.sh
resources/data/: airlines  alias  aliases  country  fir  firs  model  tma  uir  uirs
source/: CMakeLists.txt  MemoryTracker.cpp  VatsinatorApplication.cpp  VatsinatorApplication.h  defines.h  filemanager.cpp  filemanager.h  generate_translation.sh  main.cpp  memorytracker.cpp  memorytracker.h  netconfig.cpp  netconfig.h  singleton.h  unzipper.cpp  unzipper.h  vatsinator-config.h.cmake  vatsinator-config.h.in  vatsinator-version.h.cmake  vatsinatorapplication.cpp  vatsinatorapplication.h
source/cache/: CMakeLists.txt  cachefile.cpp  cachefile.h
source/cmake/: macros.cmake
source/cmake-modules/: GccVersion.cmake  Macros.cmake  Translations.cmake  Utils.cmake
source/db/: AirportsDatabase.cpp  AirportsDatabase.h  CMakeLists.txt  FirsDatabase.cpp  FirsDatabase.h  Point.cpp  Point.h  WorldMap.cpp  WorldMap.h  airline.cpp  airline.h  airlinedatabase.cpp  airlinedatabase.h  airportdatabase.cpp  airportdatabase.h  airportsdatabase.cpp  airportsdatabase.h  firdatabase.cpp  firdatabase.h  firsdatabase.cpp  firsdatabase.h  point.cpp  point.h  worldmap.cpp  worldmap.h
source/debugging/: CMakeLists.txt  debugwindow.cpp  debugwindow.h  glerrors.cpp  glerrors.h  memorytracker.cpp  memorytracker.h
source/events/: CMakeLists.txt  decisionevent.cpp  decisionevent.h  mapevent.cpp  mapevent.h  mouselonlatevent.cpp  mouselonlatevent.h  notificationevent.cpp  notificationevent.h  requestfinishedevent.cpp  requestfinishedevent.h  types.cpp  types.h  vatsimevent.cpp  vatsimevent.h
source/glutils/: CMakeLists.txt  VertexBufferObject.cpp  VertexBufferObject.h  framebufferobject.cpp  framebufferobject.h  glExtensions.cpp  glExtensions.h  glextensions.cpp  glextensions.h  glresourcemanager.cpp  glresourcemanager.h  texture.cpp  texture.h  vertexarrayobject.cpp  vertexarrayobject.h  vertexbufferobject.cpp  vertexbufferobject.h
source/i18n/: CMakeLists.txt  cn.language  el.language  fa_IR.language  generate_translation.sh  it.language  locversion.plist.in  lt.language  mac-app-menu-en.ts  mac-app-menu-pl.ts  vatsinator-cn.ts  vatsinator-de.ts  vatsinator-el.ts  vatsinator-en.ts  vatsinator-fa_IR.ts  vatsinator-fr.ts  vatsinator-he.ts  vatsinator-it.ts  vatsinator-ja_JP.ts  vatsinator-lt.ts  vatsinator-pl.ts  vatsinator-pt.ts  vatsinator-tr.ts  vatsinator-vi.ts  vatsinator-zh-Hans.ts  vatsinator-zh_CN.ts
source/imports/: CMakeLists.txt
source/models/: CMakeLists.txt  airporttablemodel.cpp  airporttablemodel.h  atctablemodel.cpp  atctablemodel.h  flighttablemodel.cpp  flighttablemodel.h  metarlistmodel.cpp  metarlistmodel.h
source/modules/: CMakeLists.txt  FlightTracker.cpp  FlightTracker.h  ModulesManager.cpp  ModulesManager.h  airporttracker.cpp  airporttracker.h  dataupdater.cpp  dataupdater.h  flighttracker.cpp  flighttracker.h  homelocation.cpp  homelocation.h  modelmatcher.cpp  modelmatcher.h  modelsmatcher.cpp  modelsmatcher.h  modulemanager.cpp  modulemanager.h  modulesmanager.cpp  modulesmanager.h  updatechecker.cpp  updatechecker.h  vatbookhandler.cpp  vatbookhandler.h
source/network/: CMakeLists.txt  HttpHandler.cpp  abstractnotamprovider.cpp  abstractnotamprovider.h  dataupdater.cpp  dataupdater.h  euroutenotamprovider.cpp  euroutenotamprovider.h  filedownloader.cpp  filedownloader.h  httphandler.cpp  httphandler.h  metarupdater.cpp  metarupdater.h  netimage.cpp  netimage.h  plaintextdownloader.cpp  plaintextdownloader.h  resourcemanager.cpp  resourcemanager.h  statspurveyor.cpp  statspurveyor.h  ultimate-weather-forecasts.h.in  weatherforecast.cpp  weatherforecast.h  weatherforecastdownloader.cpp  weatherforecastdownloader.h
source/plugins/: CMakeLists.txt  atcbooking.cpp  atcbooking.h  atcbookingtablemodel.cpp  atcbookingtablemodel.h  bookingprovider.h  mapdrawer.h  notam.cpp  notam.h  notamlistmodel.cpp  notamlistmodel.h  notamprovider.cpp  notamprovider.h  weatherdata.cpp  weatherdata.h  weatherforecastinterface.h  weatherforecastreply.cpp  weatherforecastreply.h  weatherforecastrequest.cpp  weatherforecastrequest.h
source/settings/: CMakeLists.txt  SettingsManager.cpp  SettingsManager.h  defaultsettings.h  languagemanager.cpp  languagemanager.h  settingsmanager.cpp  settingsmanager.h
source/storage/: CMakeLists.txt  abstractsettingsmodule.cpp  abstractsettingsmodule.h  abstractsettingspage.cpp  abstractsettingspage.h  cachefile.cpp  cachefile.h  defaultsettings.h  filemanager.cpp  filemanager.h  languagemanager.cpp  languagemanager.h  pluginmanager.cpp  pluginmanager.h  settingsmanager.cpp  settingsmanager.h  unzipper.cpp  unzipper.h
source/translations/: generate_translation.sh  vatsinator-en_GB.ts  vatsinator-pl_PL.ts  vatsinator-pt.ts
source/ui/: ATCDetailsWindow.cpp  AirportDetailsAction.cpp  AirportDetailsAction.h  AirportDetailsWindow.cpp  AirportDetailsWindow.h  CMakeLists.txt  ClientDetailsAction.h  ColorButton.cpp  DetailsButton.cpp  DetailsButton.h  (+20 more)
src/: ATCDetailsWindow.cpp  AirportDetailsWindow.cpp  AirportObject.cpp  AirportsDatabase.cpp  CMakeLists.txt  ClientDetailsAction.cpp  ColorButton.cpp  Controller.cpp  DetailsButton.cpp  Fir.cpp  FirsDatabase.cpp  FlightDetailsAction.cpp  FlightDetailsWindow.cpp  HttpHandler.cpp  MapWidget.cpp  MemoryTracker.cpp  Metar.cpp  MetarAction.cpp  MetarsHandler.cpp  MetarsWindow.cpp  OpenGLWidget.cpp  Pilot.cpp  SettingsWindow.cpp  ShowButton.cpp  TrackAction.cpp  Uir.cpp  UserInterface.cpp  VatsimDataHandler.cpp  VatsinatorApplication.cpp  config.h.in
(+874 files in other folders)
